<resources>
    <string name="app_name">Fracons</string>
    <string name="running_services">Running Services</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="create_new_one">Create New One</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="dob">DOB</string>
    <string name="sex">Sex</string>
    <string name="city">City</string>
    <string name="email_id">Email Id</string>
    <string name="contact_number">Contact Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="send_invitation">Send Invitation</string>

    <string-array name="sex">
        <item>Male</item>
        <item>Female</item>
    </string-array>


    <string-array name="guests">
        <item>Dhruv Bansal</item>
        <item>Hina Agarwal</item>
        <item>Smit Jain</item>
        <item>Priyanka Bansal</item>
        <item>Sachin Bansal</item>
        <item>Parson Sharma</item>
        <item>Arshbeer Singh</item>
        <item>Ronnie Kapoor</item>
    </string-array>


    <!--Tabs-->
    <string name="Comments">Comments</string>
    <string name="Details">Details</string>
    <string name="Photos">Photos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_toolbar">ToolbarActivity</string>
    <string name="item1">item1</string>
    <string name="item2">item2</string>
    <string name="hint_search">search</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <string name="my_events">My Events</string>
    <string name="invitations">Inbox</string>
    <string name="past_events">Past Events</string>


    <string-array name="nav_items">
        <item>@string/my_events</item>
        <item>@string/invitations</item>
        <item>@string/past_events</item>
    </string-array>
    <string name="title_activity_upcoming_events">UpcomingEvents</string>
    <string name="dashboard">Dashboard</string>
    <string name="logout">Logout</string>
    <string name="create_event">Create Event</string>
    <string name="title">FRACONS</string>
    <string name="search">search</string>
    <string name="delete">delete</string>
    <string name="title_activity_event_location">EventLocation</string>
    <string name="title_activity_photo_viewer">PhotoViewer</string>

</resources>
