<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="80dp"
    android:id="@+id/layout"
    tools:context="com.example.gagandeepbansal.myapplication.RegisterUserActivity"
    android:background="@color/colorPrimary">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name_lbl">
    <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/name"
    android:id="@+id/name_txt"
    android:textColor="#ffffff"
        android:singleLine="true"/></android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sex_lbl"
        android:layout_below="@+id/name_lbl">
    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sex"
        android:id="@+id/sex_txt"
        android:layout_below="@+id/sex_lbl"
        android:textColor="#ffffff"
        android:singleLine="true"/>
</android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dob_lbl"
        android:layout_below="@+id/sex_lbl">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dob"
    android:id="@+id/dob_txt"
    android:layout_below="@+id/dob_lbl"
    android:onClick="onClickDOB"
    android:textColor="#ffffff"
        android:singleLine="true"/>
</android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email_lbl"
        android:layout_below="@+id/dob_lbl">
<EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_id"
    android:id="@+id/email_txt"
    android:layout_below="@+id/email_lbl"
    android:textColor="#ffffff"
    android:singleLine="true"/>
</android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/city_lbl"
        android:layout_below="@+id/email_lbl">
        <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/city"
        android:id="@+id/city_txt"
        android:layout_below="@+id/city_lbl"
        android:textColor="#ffffff"
            android:singleLine="true"/></android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/contact_number_lbl"
        android:layout_below="@+id/city_lbl">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contact_number"
    android:id="@+id/contact_number_txt"
    android:layout_below="@+id/contact_number_lbl"
    android:textColor="#ffffff"
        android:singleLine="true"/></android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password_lbl"
        android:layout_below="@+id/contact_number_lbl">
<EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
    android:id="@+id/password_txt"
    android:layout_below="@+id/password_lbl"
    android:textColor="#ffffff"
    android:singleLine="true"/>
</android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/confirm_password_lbl"
        android:layout_below="@+id/password_lbl">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
    android:id="@+id/confirm_password_txt"
    android:layout_below="@+id/confirm_password_lbl"
    android:textColor="#ffffff"
        android:singleLine="true"/>
</android.support.design.widget.TextInputLayout>
<Button
    android:layout_width="100dp"
    android:layout_height="wrap_content"
    android:text="@string/sign_up"
    android:layout_alignParentRight="true"
    android:layout_below="@+id/confirm_password_lbl"
    android:onClick="onClickSignUp" />
</RelativeLayout>