<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="100dp"
tools:context="com.example.gagandeepbansal.myapplication.MainActivity"
android:background="@color/colorPrimary"
    android:theme="@style/AppTheme">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:id="@+id/title"

        android:textColor="#ffffff"
        android:gravity="center_horizontal"
        android:textSize="25dp"
        android:fontFamily="@string/abc_capital_on"/>
<android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/user_name_lbl"
    android:paddingTop="200dp"
    android:layout_below="@+id/title">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/user_name_txt"
        android:hint="@string/user_name"
        android:textColor="#ffffff"
        android:layout_below="@+id/user_name_lbl"
        android:singleLine="true"/>
</android.support.design.widget.TextInputLayout>

    <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/password_lbl"-->
        <!--android:text="@string/password"-->
        <!--android:textColor="#ffffff"-->
        <!--android:layout_below="@+id/user_name_txt"/>-->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password_lbl"
        android:layout_below="@+id/user_name_lbl">
<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/password_txt"
    android:hint="@string/password"
    android:layout_below="@+id/password_lbl"
    android:textColor="#ffffff"
    android:singleLine="true"/></android.support.design.widget.TextInputLayout>
<Button
    android:layout_width="100dp"
    android:layout_height="wrap_content"
    android:id="@+id/login_btn"
    android:text="@string/login"
    android:layout_below="@+id/password_lbl"
    android:layout_alignParentLeft="true"
    android:onClick="onClickLogin"
    android:layout_marginTop="20dp"
    android:background="#ffffff"    />

<Button
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:id="@+id/create_new_one_btn"
    android:text="Register"
    android:layout_below="@+id/password_lbl"
    android:layout_alignParentRight="true"
    android:onClick="onClickCreateNew"
    android:layout_marginTop="20dp"
    android:background="#ffffff"    />




</RelativeLayout>
